istio/gateway/banking-gw.yaml
# ---------------------------------------------------------------------------
# Shared external entry point for all Banking microservices
# ---------------------------------------------------------------------------
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: banking-gw
  namespace: banking
spec:
  selector:
    istio: ingressgateway            # uses the default Istio ingressgateway pods in istio-system
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"                            # accept all hosts while testing; tighten later with FQDN
